added privacy policy

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,4 +1,4 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>Vaksiddhi.in - The smart way to write!</title><style>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>Privacy policy</title><style>
 /* cspell:disable-file */
 /* webkit printing magic: print all background colors */
 html {
@@ -551,7 +551,7 @@ blockquote {
 	color: rgba(55, 53, 47, 1);
 }
 .highlight-gray_background {
-	background: rgba(241, 241, 239, 1);
+	background: rgba(248, 248, 247, 1);
 }
 .highlight-brown_background {
 	background: rgba(244, 238, 238, 1);
@@ -569,10 +569,10 @@ blockquote {
 	background: rgba(231, 243, 248, 1);
 }
 .highlight-purple_background {
-	background: rgba(244, 240, 247, 0.8);
+	background: rgba(248, 243, 252, 1);
 }
 .highlight-pink_background {
-	background: rgba(249, 238, 243, 0.8);
+	background: rgba(252, 241, 246, 1);
 }
 .highlight-red_background {
 	background: rgba(253, 235, 236, 1);
@@ -622,7 +622,7 @@ blockquote {
 	fill: inherit;
 }
 .block-color-gray_background {
-	background: rgba(241, 241, 239, 1);
+	background: rgba(248, 248, 247, 1);
 }
 .block-color-brown_background {
 	background: rgba(244, 238, 238, 1);
@@ -640,26 +640,26 @@ blockquote {
 	background: rgba(231, 243, 248, 1);
 }
 .block-color-purple_background {
-	background: rgba(244, 240, 247, 0.8);
+	background: rgba(248, 243, 252, 1);
 }
 .block-color-pink_background {
-	background: rgba(249, 238, 243, 0.8);
+	background: rgba(252, 241, 246, 1);
 }
 .block-color-red_background {
 	background: rgba(253, 235, 236, 1);
 }
-.select-value-color-uiBlue { background-color: rgba(35, 131, 226, .07); }
-.select-value-color-pink { background-color: rgba(245, 224, 233, 1); }
-.select-value-color-purple { background-color: rgba(232, 222, 238, 1); }
-.select-value-color-green { background-color: rgba(219, 237, 219, 1); }
-.select-value-color-gray { background-color: rgba(227, 226, 224, 1); }
-.select-value-color-transparentGray { background-color: rgba(227, 226, 224, 0); }
-.select-value-color-translucentGray { background-color: rgba(0, 0, 0, 0.06); }
-.select-value-color-orange { background-color: rgba(250, 222, 201, 1); }
-.select-value-color-brown { background-color: rgba(238, 224, 218, 1); }
-.select-value-color-red { background-color: rgba(255, 226, 221, 1); }
-.select-value-color-yellow { background-color: rgba(253, 236, 200, 1); }
-.select-value-color-blue { background-color: rgba(211, 229, 239, 1); }
+.select-value-color-uiBlue { background-color: undefined; }
+.select-value-color-pink { background-color: rgba(225, 136, 179, 0.27); }
+.select-value-color-purple { background-color: rgba(168, 129, 197, 0.27); }
+.select-value-color-green { background-color: rgba(123, 183, 129, 0.27); }
+.select-value-color-gray { background-color: rgba(84, 72, 49, 0.15); }
+.select-value-color-transparentGray { background-color: undefined; }
+.select-value-color-translucentGray { background-color: undefined; }
+.select-value-color-orange { background-color: rgba(224, 124, 57, 0.27); }
+.select-value-color-brown { background-color: rgba(210, 162, 141, 0.35); }
+.select-value-color-red { background-color: rgba(244, 171, 159, 0.4); }
+.select-value-color-yellow { background-color: rgba(236, 191, 66, 0.39); }
+.select-value-color-blue { background-color: rgba(93, 165, 206, 0.27); }
 .select-value-color-pageGlass { background-color: undefined; }
 .select-value-color-washGlass { background-color: undefined; }
 
@@ -681,9 +681,4 @@ blockquote {
 	background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2016%2016%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%3Crect%20x%3D%220.75%22%20y%3D%220.75%22%20width%3D%2214.5%22%20height%3D%2214.5%22%20fill%3D%22white%22%20stroke%3D%22%2336352F%22%20stroke-width%3D%221.5%22%2F%3E%0A%3C%2Fsvg%3E");
 }
 	
-</style></head><body><article id="17af37d3-7766-8057-9c94-fc199903610e" class="page sans"><header><img class="page-cover-image" src="https://images.unsplash.com/photo-1551731409-43eb3e517a1a?ixlib=rb-4.0.3&amp;q=85&amp;fm=jpg&amp;crop=entropy&amp;cs=srgb" style="object-position:center 18.44%"/><div class="page-header-icon page-header-icon-with-cover"><span class="icon">🗣️</span></div><h1 class="page-title"><a href="http://Vaksiddhi.in">Vaksiddhi.in</a> - <strong>The smart way to write!</strong></h1><p class="page-description"></p></header><div class="page-body"><h3 id="17af37d3-7766-803b-8eae-c36b3d00e435" class=""><strong>Because the right words make all the difference.</strong></h3><h1 id="17af37d3-7766-8074-a81e-c1221ce9ac5b" class=""><strong>Perfect your words, every time</strong></h1><p id="17af37d3-7766-805e-afb0-cbe0e41317a7" class="">Crafting the perfect message is no longer a guessing game. With Vaksiddhi, your words work smarter, not harder.</p><h1 id="17af37d3-7766-80b0-86f7-c33019b0ecd4" class="">💬 <strong>What is Vaksiddhi?</strong></h1><p id="17af37d3-7766-8026-a146-e419d35850c0" class="">Vaksiddhi is your AI-powered writing assistant, built as a browser extension, designed to help you write messages that truly resonate. Whether you’re texting on <strong>WhatsApp</strong>, collaborating on <strong>Slack</strong>, or emailing your team, Vaksiddhi makes every message impactful.</p><h1 id="17af37d3-7766-8006-beb2-d6c1314d1b55" class="">🔍 <strong>What Makes Vaksiddhi Different?</strong></h1><ol type="1" id="17af37d3-7766-8021-836f-ed1e5d25357c" class="numbered-list" start="1"><li><strong>Receiver-based personalisation:</strong> Understand and adapt to the personality of your message&#x27;s recipient. Save their name, tone preferences, and personality traits for instant personalisation.</li></ol><ol type="1" id="17af37d3-7766-8037-98a7-e49afce8e33a" class="numbered-list" start="2"><li><strong>Tone refinement:</strong> Adjust your text to sound <strong>professional, friendly, assertive</strong>, or <strong>empathetic</strong>, depending on your intent and audience.</li></ol><ol type="1" id="17af37d3-7766-8082-ab69-fa0b85f4ac66" class="numbered-list" start="3"><li><strong>Context-driven suggestions:</strong> Real-time suggestions tailor-made for the platform you’re using, ensuring your words fit perfectly in <strong>any conversation</strong>.</li></ol><h1 id="17af37d3-7766-8038-8e98-f1097d0d4b6c" class="">🚀 <strong>How Does It Work?</strong></h1><ol type="1" id="17af37d3-7766-8090-b3b2-fd7a349262fe" class="numbered-list" start="1"><li><strong>Install the extension:</strong> Add Vaksiddhi to your browser and integrate it seamlessly with your favourite platforms.</li></ol><ol type="1" id="17af37d3-7766-80df-a1bf-d9595c8eb86f" class="numbered-list" start="2"><li><strong>Set up profiles:</strong> Save receiver details and preferred tone styles for a personalized touch in every interaction.</li></ol><ol type="1" id="17af37d3-7766-8006-85c6-e87c5307df4c" class="numbered-list" start="3"><li><strong>Refine your text:</strong> Get AI-driven suggestions to align your message with the receiver’s personality and tone.</li></ol><h1 id="17af37d3-7766-80fb-8296-dffd019b4017" class="">🎯 <strong>Who Can Benefit?</strong></h1><ul id="17af37d3-7766-808f-9068-e5cb421f31f7" class="bulleted-list"><li style="list-style-type:disc">Product managers communicating with stakeholders</li></ul><ul id="17af37d3-7766-805f-918a-e9405a9dba62" class="bulleted-list"><li style="list-style-type:disc">Marketers crafting effective client pitches</li></ul><ul id="17af37d3-7766-806a-a11a-cd2d35fe2e37" class="bulleted-list"><li style="list-style-type:disc">Leaders sending important updates</li></ul><ul id="17af37d3-7766-8061-8386-d64d78315e77" class="bulleted-list"><li style="list-style-type:disc">Friends looking to make a message more thoughtful</li></ul><ul id="17af37d3-7766-80e3-afc5-f9474968cb0f" class="bulleted-list"><li style="list-style-type:disc">Professionals perfecting their tone for sensitive conversations</li></ul><h1 id="17af37d3-7766-8008-8b08-e4a9664d5817" class="">✨ C<strong>ommunicate Like a Pro</strong></h1><p id="17af37d3-7766-80be-a5b1-cc673ae79c3b" class="">With Vaksiddhi, every message has the power to connect. Make your words meaningful, intentional, and effective.</p><p id="17af37d3-7766-8081-8911-eda6f7d780e1" class="">
-</p><p id="17af37d3-7766-803e-87c9-c7b7ffe12e44" class="">👉 <strong>Download Now and Transform Your Messaging Game!</strong></p><p id="17af37d3-7766-8008-b34a-f9c54adbd789" class="">
-</p><p id="17af37d3-7766-8006-ab63-cfc1ba3fe294" class="">Stop wondering if you’ve said it right—start knowing.</p><p id="17af37d3-7766-801d-86a6-e65faf5bf3be" class="">
-</p></div></article><span class="sans" style="font-size:14px;padding-top:2em"></span><hr>
-<footer><p><a href="privacy-policy.html" target="_blank">Privacy Policy</a></p></footer>
-</body></html>
+</style></head><body><article id="19ff37d3-7766-80df-a258-de175ce4fb6c" class="page sans"><header><h1 class="page-title">Privacy policy</h1><p class="page-description"></p></header><div class="page-body"><p id="19ff37d3-7766-80cb-ae56-f84de3cf5e73" class=""><strong>Effective Date:</strong> 19th Feb, 2025</p><p id="19ff37d3-7766-802f-a754-fa9c207e424d" class="">Welcome to Vaksiddhi! Your privacy is important to us. This Privacy Policy explains how we collect, use, and protect your personal information when you use our AI-powered writing assistant and browser extension.</p><h3 id="19ff37d3-7766-807e-bcf0-e6b59b69e7ab" class="">1. <strong>Information We Collect</strong></h3><p id="19ff37d3-7766-80e3-bf0a-e229c5cd6b08" class="">When you use Vaksiddhi, we may collect the following types of information:</p><ul id="19ff37d3-7766-8048-a605-e6e01568fedf" class="bulleted-list"><li style="list-style-type:disc"><strong>Personal Information:</strong> Name, email address, and any details you provide when setting up receiver profiles (such as recipient names, tone preferences, and personality traits).</li></ul><ul id="19ff37d3-7766-80b9-a603-d916d162e415" class="bulleted-list"><li style="list-style-type:disc"><strong>Usage Data:</strong> Information on how you use our extension, including interactions with different platforms (e.g., WhatsApp, Slack, email) and feature usage patterns.</li></ul><ul id="19ff37d3-7766-80ee-be33-fecc6c3097a2" class="bulleted-list"><li style="list-style-type:disc"><strong>Device &amp; Technical Data:</strong> Browser type, operating system, IP address, and error logs to help improve our services.</li></ul><ul id="19ff37d3-7766-80bd-a097-fc9d78dfaacc" class="bulleted-list"><li style="list-style-type:disc"><strong>Text Input Data:</strong> The text you input into Vaksiddhi is processed in real-time to provide AI-driven suggestions but is not stored beyond the duration of the session.</li></ul><h3 id="19ff37d3-7766-8088-a519-cb41021d5e6d" class="">2. <strong>How We Use Your Information</strong></h3><p id="19ff37d3-7766-80c1-a404-f94dc3ffa76b" class="">We use the collected information to:</p><ul id="19ff37d3-7766-802e-9cb0-ce0ea52f980e" class="bulleted-list"><li style="list-style-type:disc">Provide and improve Vaksiddhi’s AI-driven writing assistance.</li></ul><ul id="19ff37d3-7766-8056-9758-ea232218864d" class="bulleted-list"><li style="list-style-type:disc">Personalize text suggestions based on receiver preferences and tone adjustments.</li></ul><ul id="19ff37d3-7766-8035-af5d-e3ce41dce35c" class="bulleted-list"><li style="list-style-type:disc">Enhance user experience through data-driven improvements and feature updates.</li></ul><ul id="19ff37d3-7766-8055-8fec-d1704f8c4ec3" class="bulleted-list"><li style="list-style-type:disc">Ensure the security and stability of our service.</li></ul><ul id="19ff37d3-7766-8046-a777-ebe56ccf8cc6" class="bulleted-list"><li style="list-style-type:disc">Comply with legal obligations and enforce our terms of use.</li></ul><h3 id="19ff37d3-7766-80d3-9088-d2057ea2244f" class="">3. <strong>Data Sharing &amp; Third-Party Services</strong></h3><p id="19ff37d3-7766-8076-b675-c132481bd409" class="">We do <strong>not</strong> sell, trade, or rent your personal information. However, we may share information in the following cases:</p><ul id="19ff37d3-7766-80f4-beb9-fabb73aaa85a" class="bulleted-list"><li style="list-style-type:disc"><strong>Service Providers:</strong> We may use third-party analytics and cloud storage providers to enhance our services while ensuring strict data security.</li></ul><ul id="19ff37d3-7766-80ea-93fa-e94e0ad22263" class="bulleted-list"><li style="list-style-type:disc"><strong>Legal Compliance:</strong> If required by law or to protect the rights and safety of users and Vaksiddhi.</li></ul><ul id="19ff37d3-7766-804f-88b1-fbc26c0bcdf4" class="bulleted-list"><li style="list-style-type:disc"><strong>Business Transfers:</strong> If Vaksiddhi undergoes a merger, acquisition, or asset sale, your data may be transferred with the same privacy safeguards.</li></ul><h3 id="19ff37d3-7766-8047-8ce3-e136d4d07370" class="">4. <strong>Data Security</strong></h3><p id="19ff37d3-7766-804a-bd84-f96aa7ffbf3a" class="">We implement industry-standard security measures, including encryption, access controls, and regular audits, to protect your data from unauthorized access, alteration, or disclosure.</p><h3 id="19ff37d3-7766-8031-9b22-d439de23c3a8" class="">5. <strong>User Control &amp; Data Retention</strong></h3><ul id="19ff37d3-7766-8009-8c1c-eefbefcbc547" class="bulleted-list"><li style="list-style-type:disc">You can update or delete your personal information from your account settings.</li></ul><ul id="19ff37d3-7766-8072-8cf2-d934bb95fe64" class="bulleted-list"><li style="list-style-type:disc">We retain collected data only as long as necessary for providing services and legal compliance.</li></ul><ul id="19ff37d3-7766-8059-9b8a-eb64ce33cc6a" class="bulleted-list"><li style="list-style-type:disc">You can opt out of data collection for analytics purposes by adjusting your browser settings.</li></ul><h3 id="19ff37d3-7766-800b-933c-d120176d938c" class="">6. <strong>Cookies &amp; Tracking Technologies</strong></h3><p id="19ff37d3-7766-8093-88a4-f93714b46557" class="">We may use cookies and similar tracking technologies to improve user experience, analyze usage trends, and personalize content. You can disable cookies through your browser settings.</p><h3 id="19ff37d3-7766-80b3-9a81-e09599ddb21a" class="">7. <strong>Children’s Privacy</strong></h3><p id="19ff37d3-7766-806b-ba0e-e5a9562bcb68" class="">Vaksiddhi is not intended for users under 13. We do not knowingly collect data from children. If we discover such data, we will delete it promptly.</p><h3 id="19ff37d3-7766-8083-976f-e6db6ed3f293" class="">8. <strong>Changes to This Policy</strong></h3><p id="19ff37d3-7766-807b-9ec3-faec519d5e7d" class="">We may update this Privacy Policy periodically. Any changes will be posted on this page with an updated effective date. Continued use of Vaksiddhi after changes means you accept the revised policy.</p><h3 id="19ff37d3-7766-80e7-a785-dce5350ee4bd" class="">9. <strong>Contact Us</strong></h3><p id="19ff37d3-7766-8065-8eb8-e908590f9ee9" class="">If you have any questions about this Privacy Policy, please contact us at:</p><p id="19ff37d3-7766-8011-9d3d-d14b46705e65" class=""><strong>Email:</strong> animeshsharma8991@gmail.com<br/><br/><strong>Website:</strong> Vaksiddhi.in</p><p id="19ff37d3-7766-80e7-9452-e659ae4c6891" class="">By using Vaksiddhi, you agree to this Privacy Policy. If you do not agree, please discontinue use of our services.</p><p id="19ff37d3-7766-80ce-8c7c-c031c89cfa2c" class=""><em>Last Updated: 19th Feb, 2025</em></p></div></article><span class="sans" style="font-size:14px;padding-top:2em"></span></body></html>
