Added favicon for address bar

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>Vaksiddhi - The smart way to communicate!</title><style>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🗣️</text></svg>">
+<title>Vaksiddhi - The smart way to communicate!</title><style>
 	/* cspell:disable-file */
 	/* webkit printing magic: print all background colors */
 	html {
